--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,11 @@ body {
     left:0;
     z-index:1;
 }
+@media only screen and (max-width: 1100px) {
+    #map {
+        bottom: 50px;
+    }
+}
 #control {
     position: absolute;
     z-index:10;
